feat: rune balances include_info flag
